feat: enhance project documentation and architecture overview; implement route guards for authentication and login, restrict CORS to frontend domains, and add health check images for improved monitoring